# Engine2D

./: .gitignore  .gitmodules  CMakeLists.txt  Engine2D.sln  PlatformerGame.vcxproj  PlatformerGame.vcxproj.filters  README.md  a  m_Level1
assets/tilemaps/: platformer-simple.json  platformer.json  test.json  tuxemon-town.json
cmake/: FindBox2D.cmake  FindCppCheck.cmake  FindSDL2.cmake  FindSDL2_image.cmake  cppcheck_analysis.cmake
examples/example1/: CMakeLists.txt
examples/example1/assets/tilemaps/: mario.json
examples/example1/src/: example1.cpp
include/: Behaviour.hpp  Color.hpp  Component.hpp  Components.hpp  Core.hpp  CursorHandler.hpp  Engine2D.hpp  Engine2DExport.hpp  GameObject.hpp  InputHandler.hpp  MathModule.hpp  Object.hpp  PhysicsHandler.hpp  RenderingHandler.hpp  Scene.hpp  SceneHandler.hpp  ScreenHandler.hpp  TextureHandler.hpp  TimeHandler.hpp  Transform.hpp  Vector2D.hpp
include/components/: BoxCollider.hpp  Camera.hpp  CapsuleCollider.hpp  CircleCollider.hpp  Collider.hpp  Components.hpp  EdgeCollider.hpp  PolygonCollider.hpp  RigidBody.hpp  SpriteRenderer.hpp
legacy/: Engine2D.cpp  Engine2D.hpp
legacy/physics/: ColliderDebugRenderer.cpp  DynamicCollider2D.cpp
legacy/src/: TextureLoader.hpp
legacy/src/math/: Vector2d.cpp
legacy/tilemap/: Tileset.cpp
src/: Application.cpp  Behaviour.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Component.cpp  CursorHandler.cpp  Engine2D.cpp  Game.cpp  Game.hpp  GameObject.cpp  InputHandler.cpp  MathModule.cpp  Object.cpp  PhysicsHandler.cpp  Player.cpp  Player.hpp  RenderingHandler.cpp  Scene.cpp  SceneHandler.cpp  ScreenHandler.cpp  TextureHandler.cpp  TextureLoader.cpp  TextureLoader.hpp  Tilemap.cpp  Tilemap.hpp  TimeHandler.cpp  Transform.cpp  Vector2D.cpp
src/Components/: Collider.cpp  PolygonCollider.cpp  SpriteRenderer.cpp
src/Engine2D/: Core.hpp  InputHandler.cpp  Object.cpp  RenderingHandler.cpp  ScreenHandler.cpp  TestEngine2D.cpp  TimeHandler.cpp  Transform.cpp
src/components/: BoxCollider.cpp  Camera.cpp  CapsuleCollider.cpp  CircleCollider.cpp  Collider.cpp  EdgeCollider.cpp  PolygonCollider.cpp  RigidBody.cpp  SpriteRenderer.cpp
src/core/: Core.hpp  InputHandler.cpp  Object.cpp  TestEngine2D.cpp  Transform.cpp
src/math/: Rectangle.cpp  Rectangle.hpp  Vector2d.cpp  Vector2d.h
src/notval/: CollisionHandler.cpp  Color.cpp  Core.hpp  CursorHandler.cpp  Engine2D.cpp  Engine2D.hpp  GameObject.cpp  InputHandler.cpp  MathModule.cpp  MathModule.hpp  Object.cpp  PhysicsHandler.cpp  RenderingHandler.cpp  Scene.cpp  SceneHandler.cpp  ScreenHandler.cpp  TestEngine2D.cpp  TestVector2D.cpp  TextureHandler.cpp  TimeHandler.cpp  Transform.cpp
src/notval/Components/: BoxCollider.cpp  CapsuleCollider.cpp  CircleCollider.cpp  Collider.cpp  Components.hpp  EdgeCollider.cpp  PolygonCollider.cpp  RigidBody.cpp  SpriteRenderer.cpp  TestCamera.cpp
src/physics/: Collider.cpp  Collider.hpp  ColliderDebugRenderer.cpp  DynamicCollider2D.cpp  StaticCollider2D.cpp
src/tilemap/: Tilemap.cpp  Tilemap.hpp  Tileset.cpp  Tileset.hpp
